# orion

./: .gitignore  COMPREHENSIVE_METRICS_GUIDE.md  Makefile  README.md  SPARSE_ATTENTION_ARCHITECTURE.md  experiment.ipynb  experiment_a100_long_context_retrieval.ipynb  experiment_p19.ipynb  experiment_publish_ablate_d.ipynb  experiment_publish_ablate_w.ipynb  experiment_publish_core.ipynb  experiment_publish_norm.ipynb  experiment_sparse_formula_ablation.ipynb  experiments.ipynb  orion.ipynb  pyproject.toml  requirements.txt  sparse_hyperparameter_tuning.ipynb  sparse_norm_control_tuning.ipynb
.github/ISSUE_TEMPLATE/: SEED_ISSUES.md  bug.yml  epic.yml  (+3 more)
configs/: ablation_sparse_a.yaml  ablation_sparse_b.yaml  exp_orion_sparse_smoke.yaml  exp_sparse_smoke.yaml  exp_sparse_window_256.yaml  exp_window_256.yaml  golden.yaml  tinyshakespeare.yaml  tinyshakespeare_dense.yaml  tinyshakespeare_sparse.yaml  tinyshakespeare_window.yaml
orion/: __cli__.py  ablation.py  benchmark_regression.py  cli.py  config.py  eval.py  experiments.py  logging_utils.py  metrics.py  model.py  models_factory.py  run.py  run_paths.py  stability.py  train.py  train_utils.py
tests/: test_all_models.py  test_benchmark_regression.py  test_causal_mask.py  test_checkpoint.py  test_cli.py  test_config.py  test_data.py  test_dense_attention.py  test_eval.py  test_experiments.py  test_logging_schema.py  test_metrics.py  test_model.py  test_orion_decoder.py  test_pg19_data.py  test_run_paths.py  test_sparse_attention.py  test_stability.py  test_train_attention_backends.py  test_window_attention.py
(+69 files in other folders)
